--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- hero
     ================================================== -->
-    <section id="hero" class="s-hero target-section" data-parallax="scroll" data-image-src="images\profilePic3000x2000.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="hero" class="s-hero target-section" data-parallax="scroll" data-image-src="images\background-dark1.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="row hero-content">
 
@@ -135,28 +135,16 @@
                     </div>
 
                     <div class="profile-pic" data-aos="fade-up">
-                        <img src="images\profilePic960x1265.jpg" 
-                        alt="">
+                        <img src="images\profilePic960x1265.jpg" alt="">
                     </div>
 
                     <h3 data-aos="fade-up">Profile</h3>
 
                     <p data-aos="fade-up">
-                        I am an honours software design student at TUS (Technological University of the Shannon). I
-                        am from Kilcormac, Co. Offaly and I am in my fourth year of study. I enjoy learning and
-                        working as part of an academic team during my studies. I am eager to learn and participate in
-                        new things and skills. 
-                        mobile apps and web development. I have done html, CSS
-                        and JavaScript projects at home starting from a coding summer camp in DCU in
-                        2014.
-                        I have a big interest in gaming, especially Rocket League, Call of Duty and puzzle
-                        games like Portal and Sudoku.
-                        I have an interest in sports, specifically canoeing and I am actively involved with my local Wheelchair basketball team, Shannonside
-                        Stealers, since 2016.
-                        I enjoy socialising with family and friends and have a keen interest in music,
-                        specifically playing the guitar.
-                        I volunteered to help fundraising for the Special Olympics in 2017.
-                        I am a member of the Spina Bifida Hydrocephalus Ireland (SBHI).
+                        I am an honours software design student at TUS (Technological University of the Shannon). I am from Kilcormac, Co. Offaly and I am in my fourth year of study. I enjoy learning and working as part of an academic team during my studies. I am eager to learn
+                        and participate in new things and skills. mobile apps and web development. I have done html, CSS and JavaScript projects at home starting from a coding summer camp in DCU in 2014. I have a big interest in gaming, especially Rocket
+                        League, Call of Duty and puzzle games like Portal and Sudoku. I have an interest in sports, specifically canoeing and I am actively involved with my local Wheelchair basketball team, Shannonside Stealers, since 2016. I enjoy socialising
+                        with family and friends and have a keen interest in music, specifically playing the guitar. I volunteered to help fundraising for the Special Olympics in 2017. I am a member of the Spina Bifida Hydrocephalus Ireland (SBHI).
                     </p>
 
                 </div>
@@ -164,8 +152,8 @@
 
         </div>
         <!-- end s-about__section--profile -->
-        
-        
+
+
         <!--
         <div class="s-about__section">
 
@@ -195,7 +183,7 @@
                     </div>
                 </div>
                 <!-- end column -->
-                <!--
+        <!--
                 <div class="column" data-aos="fade-up">
                     <div class="position">
                         <div class="position__header">
@@ -214,7 +202,7 @@
                     </div>
                 </div>
                 <!-- end column -->
-                <!--
+        <!--
                 <div class="column" data-aos="fade-up">
                     <div class="position">
                         <div class="position__header">
@@ -233,7 +221,7 @@
                     </div>
                 </div>
                 <!-- end column -->
-                <!--
+        <!--
                 <div class="column" data-aos="fade-up">
                     <div class="position">
                         <div class="position__header">
@@ -252,10 +240,10 @@
                     </div>
                 </div>
                 <!-- end column -->
-<!--
+        <!--
             </div>
             <!-- work positions -->
-<!--
+        <!--
         </div>
         <!-- end s-about__section -->
 
@@ -294,7 +282,8 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to develop high quality computer software that is efficent and effective. This software can be used on a wide range of devices from personal computers to servers to mobile devices or even small computers like the raspberry pi. 
+                                I have a wide range of skills to develop high quality computer software that is efficent and effective. This software can be used on a wide range of devices from personal computers to servers to mobile devices or even small computers like the raspberry
+                                pi.
                             </p>
                         </div>
                     </li>
@@ -305,8 +294,8 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to develop high quality mobile applications to run on Android devices. By using all of features that the phone provides and using them within the app to fulfil the users needs,
-                                 this inludes GPS and location, Notification Services, SMS and phone services. 
+                                I have a wide range of skills to develop high quality mobile applications to run on Android devices. By using all of features that the phone provides and using them within the app to fulfil the users needs, this inludes GPS and location, Notification
+                                Services, SMS and phone services.
                             </p>
                         </div>
                     </li>
@@ -317,8 +306,7 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to analyze data and making models to try and perdict future data accurately. The perdicted data can help identify trends within the data, 
-                                or most commonly perdict an outcome based on certain creatieria. 
+                                I have a wide range of skills to analyze data and making models to try and perdict future data accurately. The perdicted data can help identify trends within the data, or most commonly perdict an outcome based on certain creatieria.
                             </p>
                         </div>
                     </li>
@@ -329,8 +317,8 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to develop front and backend websites. Designing a user friendly inferface that is easy to navigate and understand the content within the webpage. Designing the backend of a website 
-                                to inlcude secure login pages, user settings and cookies, to having data stored securely in a database. 
+                                I have a wide range of skills to develop front and backend websites. Designing a user friendly inferface that is easy to navigate and understand the content within the webpage. Designing the backend of a website to inlcude secure login pages, user settings
+                                and cookies, to having data stored securely in a database.
                             </p>
                         </div>
                     </li>
@@ -341,8 +329,7 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to design and build a variety of IoT devices. From RC cars that can be controlled from your mobile devices to 
-                                smart features within your home or business. 
+                                I have a wide range of skills to design and build a variety of IoT devices. From RC cars that can be controlled from your mobile devices to smart features within your home or business.
                             </p>
                         </div>
                     </li>
@@ -353,8 +340,8 @@
                         </div>
                         <div class="services-list__item-body">
                             <p>
-                                I have a wide range of skills to design and build a secure and effeient database to store all user data. Storing user data safely is key to building the bases of a secure software that can keep your data from getting into the wrong hands.
-                                My knowledge of building mySQL and dymnanoDB databases to effeiently store user data to be used when the time is right.  
+                                I have a wide range of skills to design and build a secure and effeient database to store all user data. Storing user data safely is key to building the bases of a secure software that can keep your data from getting into the wrong hands. My knowledge
+                                of building mySQL and dymnanoDB databases to effeiently store user data to be used when the time is right.
                             </p>
                         </div>
                     </li>
@@ -398,8 +385,8 @@
                                 </div>
                                 <div class="finalText">
                                     <h2>Alexa Notification Service</h2>
-                                    <p>Ever have the problem that youre shouting at people in the house? Alexa Notification Service has you covered. Just tell alexa that you want to send a message to someone and Alexa will guide you through the 3 step process (Who, What, When). A Notification will pop up on the recieptients phone as long as they have an
-                                        internet connection.
+                                    <p>Ever have the problem that youre shouting at people in the house? Alexa Notification Service has you covered. Just tell alexa that you want to send a message to someone and Alexa will guide you through the 3 step process
+                                        (Who, What, When). A Notification will pop up on the recieptients phone as long as they have an internet connection.
                                     </p>
                                 </div>
                             </div>
@@ -416,7 +403,7 @@
             <div class="card">
                 <div class="box">
                     <div class="content">
-                        <h2 >01</h2>
+                        <h2>01</h2>
                         <h3 class=".blacktext">Games Store</h3>
                         <p class=".blacktext">A web based project with a mySQL database to handle the stock of an online store.</p>
                         <a href="https://github.com/NathanLCleary/Gaming-Store">Read More</a>
